<resources>
    <string name="app_name">Aplic</string>
    <string name="calc">Calculator</string>
    <string name="swip">Swiper</string>
    <string name="empty">ㅤ</string>
    <string name="title_activity_loading">LoadingActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="Game">GAME</string>
    <string name="dialH1">Вітаю!!!</string>
    <string name="dialParagraph">Ви досягли межі кліків, тепер ви можете онулити прогрес і отримати подвоєння очок за клік</string>
    <string name="Ok">Оk</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="plus">+</string>
    <string name="diide">-</string>
    <string name="multy">*</string>
    <string name="substr">\</string>
    <string name="del">-></string>
    <string name="res">=</string>

</resources>